Fix ugly scrollbars in Windows

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -190,7 +190,7 @@ html, body {
 .tasks-grid {
     margin: 15px -15px;
     display: flex;
-    overflow: scroll;
+    overflow: auto;
     padding: 15px 0;
 
     .task-card {
